actual/tmdb/src/css/tracks.css
.content-tracks {
  display: flex;
  flex-direction: column;
  gap: 4rem;

  padding: 0 var(--padding-browser-side) 0 var(--padding-browser-side);
  margin-bottom: 6rem;

  overflow: hidden;

  background-color: gray;
}

.content-tracks--section {
  position: relative;

  display: flex;
  flex-direction: column;
  gap: 0.5rem;

  height: fit-content;

  background-color: lightblue;
}

.content-tracks--section-heading {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.content-tracks--section-heading-title {
  color: var(--c-white);

  font-size: var(--fs-med-l);
  font-weight: 600;
}

.content-tracks--section-slider {
  position: relative;
  left: -1.5%;

  height: 14.063rem;
  width: 133.5rem;

  background-color: darkolivegreen;
}

.content-tracks--section-slider-content {
  position: absolute;
  left: 1.45%;

  flex-shrink: 0;
  height: 14.063rem;
  width: 25rem;

  transition: filter 0.2s, transform 2s cubic-bezier(0.17, 0.84, 0.44, 1);
}

.content-tracks--section-slider-content:hover {
  cursor: pointer;
}

.content-tracks--section-slider-content-img {
  height: auto;
  max-width: 100%;

  border-radius: 4px;
}

.content-tracks--section-slider-markers {
  align-self: flex-end;

  position: relative;
  bottom: 26.13%;

  display: flex;
  align-items: center;
  gap: 0.3rem;

  width: 0;

  transition: width 0.3s;
}

.content-tracks--section-slider-marker {
  background-color: var(--c-gray);

  width: 1.4rem;
  height: 0.3rem;

  border-radius: 1px;

  transition: background-color 0.3s;
}

.content-tracks--section-slider-marker:hover {
  cursor: pointer;
}

.content-tracks--section-slider-marker-active {
  background-color: var(--c-white);
}

.content-tracks--btn {
  position: absolute;
  z-index: 50;

  background: none;

  width: 3rem;
  height: 3rem;

  border: none;
}

.content-tracks--btn:hover {
  cursor: pointer;

  transform: scale(1.3);
}

.content-tracks--left-btn {
  left: -2.7%;
  bottom: 31%;

  opacity: 0;
  pointer-events: none;

  transition: opacity 0.3s, transform 0.3s;
}

.content-tracks--right-btn {
  right: -2.7%;
  bottom: 31%;

  transition: transform 0.25s;
}

.content-tracks--btn-icon {
  color: var(--c-white);

  width: 3rem;
  height: 3rem;
}

